--- a/MvcProject/Views/Home/Index.cshtml
+++ b/MvcProject/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<h2>@ViewBag.Message = Output</h2>
+<h2>@ViewBag.Message</h2> 
 <form asp-action="Index">
     <input type="text" name="FullName">
     <input type="text" name="Address">
