--- a/MvcProject/Views/Person/Index.cshtml
+++ b/MvcProject/Views/Person/Index.cshtml
@@ -17,6 +17,12 @@
                 @Html.DisplayNameFor(model => model.Address)
 
             </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Email)
+
+            </th>
+            
+            
             <th></th>
         </tr>
     </thead>
@@ -31,9 +37,15 @@
                 @Html.DisplayFor(modelItem => item.Address)
 
             </td>
+             <td>
+                @Html.DisplayFor(modelItem => item.Email)
+
+            </td>
+
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PersonId">Edit</a>
                 <a asp-action="Delete" asp-route-id="@item.PersonId">Delete</a>
+                
             </td>
         </tr>
 }
