--- a/MvcProject/Views/Person/Delete.cshtml
+++ b/MvcProject/Views/Person/Delete.cshtml
@@ -16,16 +16,10 @@
         <dd class="col-sm-10">
              @Html.DisplayFor(model => model.FullName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class="col-sm-10">
-             @Html.DisplayFor(model => model.Address)
-        </dd>
 
     </dl>
     <form asp-action="Delete">
-        <input type="Hidden" asp-for="PersonId">
+        <input type="Hidden" asp-for="PersonID">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to list</a>
     </form>
