--- a/MvcProject/Views/Person/Index.cshtml
+++ b/MvcProject/Views/Person/Index.cshtml
@@ -1,5 +1,6 @@
 @model IEnumerable<MvcProject.Models.Person>
 
+
 @{
     ViewData["Title"]="Index";
 }
@@ -11,41 +12,28 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FullName)
+                @Html.DisplayNameFor(model => model.PersonID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Address)
-
+                @Html.DisplayNameFor(model => model.FullName)
             </th>
-             <th>
-                @Html.DisplayNameFor(model => model.Email)
-
-            </th>
-            
-            
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach(var item in Model){
         <tr>
+              <td>
+                    @Html.DisplayFor(modelItem => item.PersonID)
+                </td>
             <td>
               @Html.DisplayFor(modelItem => item.FullName)
 
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Address)
-
-            </td>
-             <td>
-                @Html.DisplayFor(modelItem => item.Email)
-
-            </td>
-
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PersonId">Edit</a>
-                <a asp-action="Delete" asp-route-id="@item.PersonId">Delete</a>
-                
+                    <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.PersonID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.PersonID">Delete</a>
             </td>
         </tr>
 }
