--- a/MvcProject/Views/Person/Index.cshtml
+++ b/MvcProject/Views/Person/Index.cshtml
@@ -1,10 +1,11 @@
 @model IEnumerable<MvcProject.Models.Person>
 
-
 @{
-    ViewData["Title"]="Index";
+    ViewData["Title"] = "Index";
 }
+
 <h1>Index</h1>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -21,22 +22,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach(var item in Model){
-        <tr>
-              <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
                     @Html.DisplayFor(modelItem => item.PersonID)
                 </td>
-            <td>
-              @Html.DisplayFor(modelItem => item.FullName)
-
-            </td>
-            <td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FullName)
+                </td>
+                <td>
                     <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.PersonID">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.PersonID">Delete</a>
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
-
 </table>
